[package]
name = "oauth2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-hash = "0.3.4"
data-encoding = "2.4.0"
rand = "0.8.5"
serde = {version = "1.0.156", features = ["serde_derive"] }

[dev-dependencies]
serde_json = "1.0.94"
